<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:gravity="center">

    <TextView
            android:id="@+id/textView"
            android:text="@string/welcome"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />

    <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/brnCreateAccount"
            android:text="@string/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>